Improved evalution metrics

--- a/notebook/ML Pipeline Preparation.ipynb
+++ b/notebook/ML Pipeline Preparation.ipynb
@@ -319,7 +319,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f999062a358>"
+       "<matplotlib.image.AxesImage at 0x7f1209c03fd0>"
       ]
      },
      "execution_count": 12,
@@ -361,30 +361,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "stop_words = stopwords.words('english')\n",
     "lemmatizer = WordNetLemmatizer()\n",
-    "url_regex = r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+'"
+    "url_regex = r'http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# starting verbs extractor\n",
     "class StartingVerbExtractor(BaseEstimator, TransformerMixin):\n",
     "\n",
-    "    def starting_verb(self, text):\n",
+    "    @staticmethod\n",
+    "    def starting_verb(text):\n",
     "        sentence_list = nltk.sent_tokenize(text)\n",
     "        for sentence in sentence_list:\n",
-    "            pos_tags = nltk.pos_tag(tokenize(sentence))\n",
-    "            first_word, first_tag = pos_tags[0]\n",
-    "            if first_tag in ['VB', 'VBP'] or first_word == 'RT':\n",
-    "                return True\n",
+    "            pos_tags = nltk.pos_tag(tokenize_text(sentence))\n",
+    "            if len(pos_tags) != 0:\n",
+    "                first_word, first_tag = pos_tags[0]\n",
+    "                if first_tag in ['VB', 'VBP']:\n",
+    "                    return True\n",
     "        return False\n",
     "\n",
     "    def fit(self, x, y=None):\n",
@@ -393,29 +396,98 @@
     "    def transform(self, X):\n",
     "        X_tagged = pd.Series(X).apply(self.starting_verb)\n",
     "        return pd.DataFrame(X_tagged)\n",
-    "\n"
+    "\n",
+    "\n",
+    "class VerbCountExtractor(BaseEstimator, TransformerMixin):\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def count_verbs(text):\n",
+    "        total_verbs = 0\n",
+    "        pos_tags = nltk.pos_tag(tokenize_text(text))\n",
+    "        for word, tag in pos_tags:\n",
+    "            if tag in ['VB', 'VBP', 'VBD']:\n",
+    "                total_verbs = total_verbs + 1\n",
+    "\n",
+    "        return total_verbs\n",
+    "\n",
+    "    def fit(self, x, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        X_tagged = pd.Series(X).apply(self.count_verbs)\n",
+    "        return pd.DataFrame(X_tagged)\n",
+    "\n",
+    "\n",
+    "class NounCountExtractor(BaseEstimator, TransformerMixin):\n",
+    "    @staticmethod\n",
+    "    def count_nouns(text):\n",
+    "        total_nouns = 0\n",
+    "        pos_tags = nltk.pos_tag(tokenize_text(text))\n",
+    "        for word, tag in pos_tags:\n",
+    "            if tag in ['NN', 'NNS', 'NNPS', 'NNP']:\n",
+    "                total_nouns = total_nouns + 1\n",
+    "\n",
+    "        return total_nouns\n",
+    "\n",
+    "    def fit(self, x, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        X_tagged = pd.Series(X).apply(self.count_nouns)\n",
+    "        return pd.DataFrame(X_tagged)\n",
+    "\n",
+    "\n",
+    "class StartingModalExtractor(BaseEstimator, TransformerMixin):\n",
+    "    @staticmethod\n",
+    "    def starting_modals(text):\n",
+    "        sentence_list = nltk.sent_tokenize(text)\n",
+    "        for sentence in sentence_list:\n",
+    "            pos_tags = nltk.pos_tag(tokenize_text(sentence))\n",
+    "            if len(pos_tags) != 0:\n",
+    "                first_word, first_tag = pos_tags[0]\n",
+    "                if first_tag == 'MD':\n",
+    "                    return True\n",
+    "        return False\n",
+    "\n",
+    "    def fit(self, x, y=None):\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        X_tagged = pd.Series(X).apply(self.starting_modals)\n",
+    "        return pd.DataFrame(X_tagged)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tokenize(text):\n",
-    "    detected_urls = re.findall(url_regex, text)\n",
-    "    for url in detected_urls:\n",
-    "        text = text.replace(url, \"urlplaceholder\")\n",
+    "def tokenize_text(text):\n",
+    "    \"\"\"\n",
+    "        Apply case normalization, lemmatize and tokenize text.\n",
     "\n",
-    "    tokens = word_tokenize(text)\n",
-    "    lemmatizer = WordNetLemmatizer()\n",
+    "        INPUT:\n",
+    "            text -- text in source format\n",
+    "        OUTPUT:\n",
+    "            clean_tokens -- cleaned tokenized list\n",
+    "    \"\"\"\n",
     "\n",
-    "    clean_tokens = []\n",
-    "    for tok in tokens:\n",
-    "        clean_tok = lemmatizer.lemmatize(tok).lower().strip()\n",
-    "        clean_tokens.append(clean_tok)\n",
-    "\n",
-    "    return clean_tokens"
+    "    # transform to lower case\n",
+    "    text = text.lower()\n",
+    "    # remove urls\n",
+    "    text = re.sub(url_regex, \" \", text)\n",
+    "    # remove punctuations\n",
+    "    text = re.sub(r\"[^A-Za-z0-9]+\", \" \", text)\n",
+    "    # remove numbers\n",
+    "    text = re.sub(r\"\\d+\", \" \", text)\n",
+    "    # tokenize for words\n",
+    "    words = word_tokenize(text)\n",
+    "    # Remove stop words\n",
+    "    tokens = [w for w in words if w not in stopwords.words(\"english\")]\n",
+    "    # lemmatize the tokens\n",
+    "    clean_tokens = list(map(lambda token: lemmatizer.lemmatize(token).strip(), tokens))\n",
+    "    return clean_tokens\n"
    ]
   },
   {
@@ -428,19 +500,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_pipeline(estimator):\n",
+    "    \"\"\"\n",
+    "    This separate function can be used to test with multiple estimators.\n",
+    "    INPUT:\n",
+    "        estimator - An estimator that is used to build `sklearn.pipeline` Pipeline\n",
+    "\n",
+    "    OUTPUT:\n",
+    "        pipeline - `sklearn.pipeline` with a estimator and multiple features.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # define pipeline\n",
     "    pipeline = Pipeline([\n",
     "        ('features', FeatureUnion([\n",
     "            ('text_pipeline', Pipeline([\n",
-    "                ('vect', CountVectorizer(tokenizer=tokenize)),\n",
+    "                ('vect', CountVectorizer(tokenizer=tokenize_text)),\n",
     "                ('tfidf', TfidfTransformer())\n",
     "            ])),\n",
-    "\n",
-    "            ('starting_verb', StartingVerbExtractor())\n",
+    "            ('starting_verb_noun', StartingVerbExtractor()),\n",
+    "            ('count_verbs', VerbCountExtractor()),\n",
+    "            ('count_nouns', NounCountExtractor()),\n",
+    "            ('starting_modals', StartingModalExtractor())\n",
     "        ])),\n",
     "\n",
     "        ('clf', estimator)\n",
@@ -460,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,16 +608,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sajith/Documents/Acedamic/Projects/Python3.6/lib/python3.6/site-packages/sklearn/multiclass.py:75: UserWarning: Label not 0.0 is present in all training examples.\n",
+      "  str(classes[c]))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('features',\n",
+       "                 FeatureUnion(n_jobs=None,\n",
+       "                              transformer_list=[('text_pipeline',\n",
+       "                                                 Pipeline(memory=None,\n",
+       "                                                          steps=[('vect',\n",
+       "                                                                  CountVectorizer(analyzer='word',\n",
+       "                                                                                  binary=False,\n",
+       "                                                                                  decode_error='strict',\n",
+       "                                                                                  dtype=<class 'numpy.int64'>,\n",
+       "                                                                                  encoding='utf-8',\n",
+       "                                                                                  input='content',\n",
+       "                                                                                  lowercase=True,\n",
+       "                                                                                  max_df=1.0,\n",
+       "                                                                                  max_features=None,\n",
+       "                                                                                  min_df=1,\n",
+       "                                                                                  ngram_range=(1,\n",
+       "                                                                                               1),\n",
+       "                                                                                  preprocessor=Non...\n",
+       "                                                                                                      class_weight=None,\n",
+       "                                                                                                      criterion='gini',\n",
+       "                                                                                                      max_depth=None,\n",
+       "                                                                                                      max_features='auto',\n",
+       "                                                                                                      max_leaf_nodes=None,\n",
+       "                                                                                                      max_samples=None,\n",
+       "                                                                                                      min_impurity_decrease=0.0,\n",
+       "                                                                                                      min_impurity_split=None,\n",
+       "                                                                                                      min_samples_leaf=1,\n",
+       "                                                                                                      min_samples_split=2,\n",
+       "                                                                                                      min_weight_fraction_leaf=0.0,\n",
+       "                                                                                                      n_estimators=100,\n",
+       "                                                                                                      n_jobs=5,\n",
+       "                                                                                                      oob_score=False,\n",
+       "                                                                                                      random_state=None,\n",
+       "                                                                                                      verbose=0,\n",
+       "                                                                                                      warm_start=False),\n",
+       "                                                                     n_jobs=None),\n",
+       "                                       n_jobs=None))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pipeline.fit(X_train, Y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,9 +683,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        precision    recall  f1-score   support\n",
+      "\n",
+      "               related       0.83      0.96      0.89      3983\n",
+      "               request       0.86      0.51      0.64       931\n",
+      "                 offer       0.00      0.00      0.00        20\n",
+      "           aid_related       0.77      0.70      0.73      2226\n",
+      "          medical_help       0.74      0.06      0.12       447\n",
+      "      medical_products       0.75      0.12      0.20       284\n",
+      "     search_and_rescue       0.62      0.05      0.09       170\n",
+      "              security       0.50      0.01      0.02       104\n",
+      "              military       0.86      0.06      0.12       189\n",
+      "           child_alone       0.00      0.00      0.00         0\n",
+      "                 water       0.91      0.37      0.52       371\n",
+      "                  food       0.84      0.63      0.72       597\n",
+      "               shelter       0.80      0.42      0.55       477\n",
+      "              clothing       0.82      0.12      0.20        77\n",
+      "                 money       0.67      0.02      0.03       112\n",
+      "        missing_people       0.00      0.00      0.00        68\n",
+      "              refugees       0.20      0.01      0.02       167\n",
+      "                 death       0.85      0.16      0.27       245\n",
+      "             other_aid       0.79      0.04      0.07       715\n",
+      "infrastructure_related       1.00      0.01      0.01       343\n",
+      "             transport       0.78      0.07      0.13       247\n",
+      "             buildings       0.87      0.13      0.23       258\n",
+      "           electricity       1.00      0.02      0.04       103\n",
+      "                 tools       0.00      0.00      0.00        36\n",
+      "             hospitals       0.00      0.00      0.00        57\n",
+      "                 shops       0.00      0.00      0.00        18\n",
+      "           aid_centers       0.00      0.00      0.00        67\n",
+      "  other_infrastructure       0.00      0.00      0.00       229\n",
+      "       weather_related       0.86      0.69      0.76      1489\n",
+      "                floods       0.95      0.38      0.54       434\n",
+      "                 storm       0.76      0.48      0.59       505\n",
+      "                  fire       1.00      0.04      0.07        56\n",
+      "            earthquake       0.89      0.82      0.85       509\n",
+      "                  cold       0.58      0.07      0.12       107\n",
+      "         other_weather       0.56      0.03      0.06       277\n",
+      "         direct_report       0.79      0.38      0.51      1029\n",
+      "\n",
+      "             micro avg       0.82      0.53      0.65     16947\n",
+      "             macro avg       0.61      0.20      0.25     16947\n",
+      "          weighted avg       0.79      0.53      0.57     16947\n",
+      "           samples avg       0.68      0.49      0.52     16947\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sajith/Documents/Acedamic/Projects/Python3.6/lib/python3.6/site-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/sajith/Documents/Acedamic/Projects/Python3.6/lib/python3.6/site-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/sajith/Documents/Acedamic/Projects/Python3.6/lib/python3.6/site-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/sajith/Documents/Acedamic/Projects/Python3.6/lib/python3.6/site-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
    "source": [
     "print(classification_report(Y_test, prediction, target_names=Y.columns.values))"
    ]
